Reworked routes and fix path traversal spelling
