# cmd/go-swagger/restapi/operations/cmd_injection/post_cookies_command_responses.go
@@ -1,0 +1,92 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package cmd_injection
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PostCookiesCommandOKCode is the HTTP code returned for type PostCookiesCommandOK
+const PostCookiesCommandOKCode int = 200
+
+/*PostCookiesCommandOK returns the rendered response as a string
+
+swagger:response postCookiesCommandOK
+*/
+type PostCookiesCommandOK struct {
+
+	/*The response when succesful query happens
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewPostCookiesCommandOK creates PostCookiesCommandOK with default headers values
+func NewPostCookiesCommandOK() *PostCookiesCommandOK {
+
+	return &PostCookiesCommandOK{}
+}
+
+// WithPayload adds the payload to the post cookies command o k response
+func (o *PostCookiesCommandOK) WithPayload(payload string) *PostCookiesCommandOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post cookies command o k response
+func (o *PostCookiesCommandOK) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostCookiesCommandOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*PostCookiesCommandDefault Error occured
+
+swagger:response postCookiesCommandDefault
+*/
+type PostCookiesCommandDefault struct {
+	_statusCode int
+}
+
+// NewPostCookiesCommandDefault creates PostCookiesCommandDefault with default headers values
+func NewPostCookiesCommandDefault(code int) *PostCookiesCommandDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostCookiesCommandDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post cookies command default response
+func (o *PostCookiesCommandDefault) WithStatusCode(code int) *PostCookiesCommandDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post cookies command default response
+func (o *PostCookiesCommandDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *PostCookiesCommandDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(o._statusCode)
+}
